@@ -19,6 +19,13 @@ stage_three do
   say_wizard "recipe stage three"
   if (prefer :authentication, 'devise') && (prefer :tests, 'rspec')
     generate 'testing:configure devise -f'
+    if (prefer :devise_modules, 'confirmable') || (prefer :devise_modules, 'invitable')
+      inject_into_file 'spec/factories/users.rb', '    confirmed_at Time.now', :after => 'factory :user do'
+      default_url = '  config.action_mailer.default_url_options = { :host => Rails.application.secrets.domain_name }'
+      inject_into_file 'config/environments/test.rb', default_url, :after => "delivery_method = :test\n"
+      gsub_file 'spec/features/users/user_edit_spec.rb', /successfully./, 'successfully,'
+      gsub_file 'spec/features/visitors/sign_up_spec.rb', /Welcome! You have signed up successfully./, 'A message with a confirmation'
+    end
   end
   if (prefer :authentication, 'omniauth') && (prefer :tests, 'rspec')
     generate 'testing:configure omniauth -f'
